# tpe

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: benchmark.rs  tpe-solver.rs  tpe_solver.rs
src/: density_estimation.rs  lib.rs  range.rs
src/density_estimation/: histogram.rs  parzen.rs
