[package]
name = "tpe"
version = "0.2.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2024"
rust-version = "1.88"
description = "A library that implements TPE, a hyperparameter optimization algorithm"
homepage = "https://github.com/sile/tpe"
repository = "https://github.com/sile/tpe"
readme = "README.md"
categories = ["science"]
license = "MIT"

[dependencies]
rand = "0.8"
rand_distr = "0.4"
statrs = "0.18.0"

[dev-dependencies]
anyhow = "1"
kurobako_core = "0.1"
serde_json = "1"
tempfile = "3"
