[package]
name = "tpe"
version = "0.3.1"
edition = "2024"
rust-version = "1.88"
description = "A library that implements TPE, a hyperparameter optimization algorithm"
homepage = "https://github.com/sile/tpe"
repository = "https://github.com/sile/tpe"
readme = "README.md"
categories = ["science"]
license = "MIT"

[dependencies]
rand = "0.10"

[dev-dependencies]
nojson = "0.3"
tempfile = "3"
